<resources>
    <string name="app_name">BAC Indicator</string>

    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_repeat">Repeat</string>
    <string name="action_game">Games</string>

    <string name="buttonCall">Send Message</string>
    
    
    <!--  KEY GOOGLE MAP  -->
    
    <string name="keyMap">AIzaSyDIYjLbIpSbDaHvV9W5Bg6jQVhqZ5DQUR0</string>
    
    <!-- GENERIC -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="play">Start</string>
    <string name="skip">Skip</string>

    <!-- SLASHSCREEN -->
    <string name="welcome">Welcome !\nPlease begin by providing your weight and gender in the settings.</string>

    <!-- Add Dialog -->
    <string name="dialog_add_title">Add a drink</string>
    <string name="dialog_add_quantity_title">Select the quantity</string>
    <string name="dialog_add_quantity_message">How many %s did you drink ?</string>

    <!-- ERRORS -->
    <string name="error_no_last_drink">There is no drink to repeat !</string>

    <!-- SETTINGS -->
    <string name="appMessage">Can you please come to pick me up ? </string>
    <string name="personal_info">Personal Information</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="games">Games</string>
    <string name="game_mode">Game Mode</string>
    <string name="sos_friend">SOS Friend</string>
    <string name="friend">Friend</string>
    <string name="app_text">Application text</string>
    <string name="message">Message</string>
    <string name="units">Units</string>

    <string name="hint_height">Please provide your height</string>
    <string name="hint_weight">Please provide your weight</string>
    <string name="hint_gender">Please provide your gender</string>
    <string name="hint_app_text">Please select the check box to use the application message</string>
    <string name="hint_game_mode">Please select the check box to activate the games</string>
    <string name="hint_friend">Please select a contact to use</string>
    <string name="hint_message">Please write a message for your contact</string>
    <string name="hint_units">Please select a unit to use</string>

    <string name="title_activity_contact_picker">ContactPicker</string>
    <string name="context_menu_title">Actions</string>
    <string name="context_menu_delete">Delete drink</string>
    <string name="bac">Blood Alcohol content :</string>
    <string name="default_bac">0.00</string>
    <string name="drink_format">%1$d %2$s of %3$s</string>

    <!-- Games -->
    <string name="game_win_title">You won !</string>
    <string name="game_win_message">You seems not to be that drunk.\nThat doesn\'t mean you can drive thought !\nBe responsible.</string>
    <string name="game_loose_title">You lost !</string>
    <string name="game_loose_message">Don\'t try to drive if you drunk alcohol !</string>

    <string name="game_color_legend">True or false ?</string>
    <string name="game_color_dialog_title">Start the color game</string>
    <string name="game_color_dialog_text">Press start whenever you are ready !</string>

    <string name="game_pint_dialog_title">Start the pint game</string>
    <string name="game_pint_dialog_text">Put the pint inside the oval\nPress start whenever you are ready !</string>

    <string name="title_ball_game">Start the ball game</string>
    <string name="message_ball_game">Keep the ball the circle, don\'t move too much!</string>
    <string name="message_no_sensor">No sensor found on this phone. Impossible to play this game.</string>

    <string name="button_sms_text">Send SMS to %s</string>
    <string name="sms_send">A SMS has been send to %s</string>
    <string name="invalid_contact">You cannot select this contact.</string>
</resources>
