<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
    >

    <item android:id="@+id/action_add" android:title="@string/action_add"
        android:icon="@drawable/add" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_repeat" android:title="@string/action_repeat"
        android:icon="@drawable/repeat" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_game" android:title="@string/action_game"
        android:icon="@drawable/game" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
